--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="book">
             <div class="page">
                 <div class="page__1">
-                    <h2 class="heading">Happy Hug Day, My Bestie!</h2>
+                    <h2 class="heading">Happy Hug Day, My Bestie{Afreen}!</h2>
 
                   <img class="image" src="image.jpg" alt="">
                     <p class="hover"></p>
